jss-compiler/tests/semantic_errors/increment_const.jss
function void main() {
    const int c = 5;
    ++c;
}
